Fixed some initial issues with formatting

--- a/index.html
+++ b/index.html
@@ -10,22 +10,44 @@
     </style>
 </head>
 <body>
-    <h1>Welcome</h1>
-    <p>
-        My name is Nicholas Reardon. I have been developing software projects for the past few years, and I have a passion for 3D Computer Graphics.
-        I find that when the artistry of 3D modeling and animation is combined with the technical finesse of physics and linear algebra, you can create something truly breathtaking.
-    </p>
-    <h1>Proj 1</h1>
-    <h1>Proj 2</h1>
-    <h1>Proj 3</h1>
-
-    <h1 class="visually-hidden">Heroes examples</h1>
 
     <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="/assets/img/woops.jpg" alt="" width="72" height="57">
-        <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
+        <h1 class="display-5 fw-bold text-body-emphasis">Welcome</h1>
         <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">Lalalalalalallalallalala lallalalala allalalalalla alalallala allalala</p>
+            <p class="lead mb-4">
+                My name is Nicholas Reardon. I have been developing software projects for the past few years, and I have a passion for 3D Computer Graphics.
+                I find that when the artistry of 3D modeling and animation is combined with the technical finesse of physics and linear algebra, you can create something truly breathtaking.
+            </p>
+        </div>
+    </div>
+
+    <div class="px-4 py-5 my-5 text-center">
+        <h1 class="display-5 fw-bold text-body-emphasis">Project 1</h1>
+        <img class="d-block mx-auto mb-4" src="/assets/img/woops.jpg" alt="" width="72" height="57">
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">
+
+            </p>
+        </div>
+    </div>
+
+    <div class="px-4 py-5 my-5 text-center">
+        <h1 class="display-5 fw-bold text-body-emphasis">Project 2</h1>
+        <img class="d-block mx-auto mb-4" src="/assets/img/woops.jpg" alt="" width="72" height="57">
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">
+
+            </p>
+        </div>
+    </div>
+
+    <div class="px-4 py-5 my-5 text-center">
+        <h1 class="display-5 fw-bold text-body-emphasis">Project 3</h1>
+        <img class="d-block mx-auto mb-4" src="/assets/img/woops.jpg" alt="" width="72" height="57">
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">
+
+            </p>
         </div>
     </div>
 
