--- a/index.html
+++ b/index.html
@@ -6,51 +6,85 @@
     <title>Nicholas Reardon</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
+        .b-example-divider {
+            width: 100%;
+            height: 2rem;
+            background-color: rgba(0, 0, 0, .1);
+            border: solid rgba(0, 0, 0, .15);
+            border-width: 1px 0;
+            box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+        }
 
+        .custom-grey-bg {
+            background-color: #d4d4d4; /* Grey background color */
+        }
+
+        .custom-bg {
+            background-color: #ebd1c0; /* Black background color */
+        }
     </style>
 </head>
-<body>
+<body class="custom-bg">
+    <main>
 
-    <div class="px-4 py-5 my-5 text-center">
-        <h1 class="display-5 fw-bold text-body-emphasis">Welcome</h1>
-        <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">
-                My name is Nicholas Reardon. I have been developing software projects for the past few years, and I have a passion for 3D Computer Graphics.
-                I find that when the artistry of 3D modeling and animation is combined with the technical finesse of physics and linear algebra, you can create something truly breathtaking.
-            </p>
+        <!--This is the header paragraph talking aobut me-->
+        <div class="px-4 py-5 my-5 text-center">
+            <h1 class="display-5 fw-bold text-body-emphasis">Welcome</h1>
+            <div class="col-lg-6 mx-auto">
+                <p class="lead mb-4">
+                    My name is Nicholas Reardon. I have been developing software projects for the past few years, and I have a passion for 3D Computer Graphics.
+                    I find that when the artistry of 3D modeling and animation is combined with the technical finesse of physics and linear algebra, you can create something truly breathtaking.
+                    Feel free to take a look at a few of the projects I have worked on.
+                </p>
+            </div>
         </div>
-    </div>
 
-    <div class="px-4 py-5 my-5 text-center">
-        <h1 class="display-5 fw-bold text-body-emphasis">Project 1</h1>
-        <img class="d-block mx-auto mb-4" src="/assets/img/woops.jpg" alt="" width="72" height="57">
-        <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">
 
-            </p>
+        <!--Everything beyond this is projects and experience-->
+
+        <div class="container my-5">
+            <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+
+                <h1 class="display-4 fw-bold lh-1 text-body-emphasis text-center p-2">Unity Occlusion Culling</h1>
+
+                <!--Intro statement with video/image-->
+                <div class="col-md-4">
+                    <p class="lead">
+                        In this project, I created an occlusion culling script that utilized raycasting to selectively render visible objects.
+                        I created all of the building models in Blender, and then set up a testing environment in Unity. 
+                    </p>
+                </div>
+                <div class="col-md-8 text-center">
+                    <div class="row p-3">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" src="http://www.youtube.com/embed/RM5Ckgr_Rn8" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div class="row p-3">
+                        <div class="col-md text-center">
+                            <img class="rounded-lg-3" src="/assets/img/build1.PNG" alt="" width="260" height="200">
+                        </div>
+                        <div class="col-md text-center">
+                            <img class="rounded-lg-3" src="/assets/img/build2.PNG" alt="" width="160" height="200">
+                        </div>
+                        <div class="col-md text-center">
+                            <img class="rounded-lg-3" src="/assets/img/build3.PNG" alt="" width="230" height="200">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
-    </div>
 
-    <div class="px-4 py-5 my-5 text-center">
-        <h1 class="display-5 fw-bold text-body-emphasis">Project 2</h1>
-        <img class="d-block mx-auto mb-4" src="/assets/img/woops.jpg" alt="" width="72" height="57">
-        <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">
 
-            </p>
-        </div>
-    </div>
 
-    <div class="px-4 py-5 my-5 text-center">
-        <h1 class="display-5 fw-bold text-body-emphasis">Project 3</h1>
-        <img class="d-block mx-auto mb-4" src="/assets/img/woops.jpg" alt="" width="72" height="57">
-        <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">
+        <div class="b-example-divider"></div>
 
-            </p>
-        </div>
-    </div>
 
+
+        <div class="b-example-divider mb-0"></div>
+
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
