--- a/index.html
+++ b/index.html
@@ -15,16 +15,13 @@
             box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
         }
 
-        .custom-grey-bg {
-            background-color: #d4d4d4; /* Grey background color */
+        body {
+            background-color: #e3e3e3; /*background color */
         }
 
-        .custom-bg {
-            background-color: #ebd1c0; /* Black background color */
-        }
     </style>
 </head>
-<body class="custom-bg">
+<body>
     <main>
 
         <!--This is the header paragraph talking aobut me-->
@@ -40,18 +37,17 @@
         </div>
 
 
-        <!--Everything beyond this is projects and experience-->
+        <!--Occlusion Culling-->
 
         <div class="container my-5">
             <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
 
                 <h1 class="display-4 fw-bold lh-1 text-body-emphasis text-center p-2">Unity Occlusion Culling</h1>
 
-                <!--Intro statement with video/image-->
                 <div class="col-md-4">
                     <p class="lead">
                         In this project, I created an occlusion culling script that utilized raycasting to selectively render visible objects.
-                        I created all of the building models in Blender, and then set up a testing environment in Unity. 
+                        I created all of the building models in Blender, and then set up a testing environment in Unity.
                     </p>
                 </div>
                 <div class="col-md-8 text-center">
@@ -76,7 +72,78 @@
 
 
 
+
         <div class="b-example-divider"></div>
+
+
+
+
+        <!--School Projects-->
+
+        <div class="container my-5">
+            <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+
+                <h1 class="display-4 fw-bold lh-1 text-body-emphasis text-center p-2">University Graphics Projects</h1>
+
+                <div class="row p-3 text-center">
+                    <p class="lead">
+                        Each of the following are computer graphics assignments that I worked on at Purdue Univeristy. 
+                        While I did not personally set up the environments, I did implement the functionality of the C++ code.
+                    </p>
+                </div>
+
+                <div class="row p-3">
+                    <div class="col-md text-center">
+                        <img class="rounded-lg-3" src="/assets/img/proced.gif" alt="" width="460" height="400">
+                    </div>
+                    <div class="col-md text-center">
+                        <h2 class="fw-bold lh-1 text-body-emphasis text-center p-2">
+                            Procedural Modeling and L-System Testing
+                        </h2>
+                        <p class="lead mb-4">
+                            In this project, I implemented a mini-procedural tree modeler using L-Systems. 
+                            It reads in a simple text file containing the rotation angle, iterations, axiom, and rules.
+                            Once the string is creaetd, it is translated into 2D line segments following "turtle drawing" logic to produce the geometry.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="p-3"></div>
+
+                <div class="row p-3">
+                    <div class="col-md text-center">
+                        <h2 class="fw-bold lh-1 text-body-emphasis text-center p-2">
+                            Texture, Bump, and Shadow Mapping
+                        </h2>
+                        <p class="lead mb-4">
+                            For this project, I first had to construct the TBN coordinate system and convert the computation of lighting from world space to tangent space. 
+                            Next, I rendered the scene from the light's persepctive to get the depth map as texture, and then added shading and shadows in their respective places. 
+                            In addition, I added diffusion into the shadows to create "soft shadows."
+                        </p>
+                    </div>
+                    <div class="col-md text-center">
+                        <img class="rounded-lg-3" src="/assets/img/shadow.gif" alt="" width="460" height="400">
+                    </div>
+                </div>
+
+                <div class="p-3"></div>
+
+                <div class="row p-3">
+                    <div class="col-md text-center">
+                        <img class="rounded-lg-3" src="/assets/img/build1.PNG" alt="" width="460" height="400">
+                    </div>
+                    <div class="col-md text-center">
+                        <h2 class="fw-bold lh-1 text-body-emphasis text-center p-2">
+                            Phong Shading and Specular Reflection
+                        </h2>
+                        <p class="lead mb-4">
+                            
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
 
 
 
