--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="col-md-8 text-center">
                     <div class="row p-3">
-                        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/RM5Ckgr_Rn8/" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/8F179_CA1AI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                     </div>
                     <div class="row p-3">
                         <div class="col-md text-center">
@@ -130,14 +130,15 @@
 
                 <div class="row p-3">
                     <div class="col-md text-center">
-                        <img class="rounded-lg-3" src="/assets/img/build1.PNG" alt="" width="460" height="400">
+                        <img class="rounded-lg-3" src="/assets/img/phong.gif" alt="" width="460" height="400">
                     </div>
                     <div class="col-md text-center">
                         <h2 class="fw-bold lh-1 text-body-emphasis text-center p-2">
-                            Phong Shading and Specular Reflection
+                            Ray Tracing, Phong Shading, and Specular Reflection
                         </h2>
                         <p class="lead mb-4">
-                            
+                            Starting with a sphere, ground plane, sky, and light source, I implemented ray-sphere intersection and computed surface normals for the sphere and plane. 
+                            Next, I created a shading function based on the Phong model and specular reflection to result in the glossy finish.
                         </p>
                     </div>
                 </div>
