--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         </div>
 
 
+        <div class="b-example-divider"></div>
+
         <!--Occlusion Culling-->
 
         <div class="container my-5">
@@ -87,7 +89,7 @@
 
                 <div class="row p-3 text-center">
                     <p class="lead">
-                        Each of the following are computer graphics assignments that I worked on at Purdue Univeristy. 
+                        Each of the following are computer graphics assignments that I worked on at Purdue Univeristy.
                         While I did not personally set up the environments, I did implement the functionality of the C++ code.
                     </p>
                 </div>
@@ -101,7 +103,7 @@
                             Procedural Modeling and L-System Testing
                         </h2>
                         <p class="lead mb-4">
-                            In this project, I implemented a mini-procedural tree modeler using L-Systems. 
+                            In this project, I implemented a mini-procedural tree modeler using L-Systems.
                             It reads in a simple text file containing the rotation angle, iterations, axiom, and rules.
                             Once the string is creaetd, it is translated into 2D line segments following "turtle drawing" logic to produce the geometry.
                         </p>
@@ -116,8 +118,8 @@
                             Texture, Bump, and Shadow Mapping
                         </h2>
                         <p class="lead mb-4">
-                            For this project, I first had to construct the TBN coordinate system and convert the computation of lighting from world space to tangent space. 
-                            Next, I rendered the scene from the light's persepctive to get the depth map as texture, and then added shading and shadows in their respective places. 
+                            For this project, I first had to construct the TBN coordinate system and convert the computation of lighting from world space to tangent space.
+                            Next, I rendered the scene from the light's persepctive to get the depth map as texture, and then added shading and shadows in their respective places.
                             In addition, I added diffusion into the shadows to create "soft shadows."
                         </p>
                     </div>
@@ -137,7 +139,7 @@
                             Ray Tracing, Phong Shading, and Specular Reflection
                         </h2>
                         <p class="lead mb-4">
-                            Starting with a sphere, ground plane, sky, and light source, I implemented ray-sphere intersection and computed surface normals for the sphere and plane. 
+                            Starting with a sphere, ground plane, sky, and light source, I implemented ray-sphere intersection and computed surface normals for the sphere and plane.
                             Next, I created a shading function based on the Phong model and specular reflection to result in the glossy finish.
                         </p>
                     </div>
